# textSummarizer

./: Dockerfile  cosine_distance.py  docker-compose.yml  frequency_analysis.py  manage.py  pyproject.toml  requirements.txt
Summury/: apps.py  cosine_distance.py  frequency_analysis.py  models.py  serializers.py  tf_idf.py  urls.py  views.py
Summury/templates/: home.html  result.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: TextCardView.vue
frontend/src/services/: api.js  consts.js
frontend/src/views/: HomeView.vue
textSummarizer/: asgi.py  settings.py  urls.py  wsgi.py
