[tool.poetry]
name = "textsummarizer"
version = "0.1.0"
description = ""
authors = ["ttalova <talova0304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
drf-yasg = "^1.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
